--- a/history.mdx
+++ b/history.mdx
@@ -1,12 +1,8 @@
-#  History
-
-[jotai-history](https://jotai.org/docs/integrations/history) is a utility package for advanced state history management
-
-## install
-
-```
-npm i jotai-history
-```
+---
+title: History
+nav: 3.6
+keywords: history, undo, redo
+---
 
 ## atomWithHistory
 
@@ -23,7 +19,7 @@ The history atom tracks changes to the `targetAtom` and maintains a list of prev
 
 ### Usage
 
-```tsx
+```ts
 import { atom } from 'jotai'
 import { atomWithHistory } from 'jotai/utils'
 
@@ -48,19 +44,23 @@ export function CountComponent() {
 ### Signature
 
 ```ts
-type Undoable<T> = {
+function atomWithUndo<T>(
+  targetAtom: PrimitiveAtom<T>,
+  limit: number
+): Atom<{
+  value: T
   undo: Function
   redo: Function
   canUndo: boolean
   canRedo: boolean
-}
-function atomWithUndo<T>(targetAtom: PrimitiveAtom<T>, limit: number): Atom<Undoable>
+}>
 ```
 
 `atomWithHistory` provides undo and redo capabilities for an atom. It keeps track of the value history of `targetAtom` and provides methods to move back and forth through that history.
 
 The returned object includes:
 
+- `value`: The current value of the `targetAtom`.
 - `undo`: A function to revert to the previous state.
 - `redo`: A function to advance to the next state.
 - `canUndo`: A boolean indicating if it's possible to undo.
@@ -73,11 +73,11 @@ import { atom } from 'jotai'
 import { atomWithUndo } from 'jotai/utils'
 
 const counterAtom = atom(0)
-const undoCounterAtom = atomWithUndo(counterAtom, 5)
+const counterWithUndo = atomWithUndo(counterAtom, 5)
 
 export function CounterComponent() {
-  const { undo, redo, canUndo, canRedo } = useAtomValue(undoCounterAtom)
-  const [value, setValue] = useAtom(counterAtom)
+  const [{ value, undo, redo, canUndo, canRedo }, setValue] =
+    useAtom(counterWithUndo)
 
   return (
     <>
@@ -94,9 +94,6 @@ export function CounterComponent() {
 }
 ```
 
-## Example
-https://codesandbox.io/p/sandbox/musing-orla-g6qj3q?file=%2Fsrc%2FApp.tsx%3A10%2C23
-
 ## Memory Management
 
-⚠️ Since `atomWithHistory` and `atomWithUndo` keeps a history of states, it's important to manage memory by setting a reasonable `limit`. Excessive history can lead to memory bloat, especially in applications with frequent state updates.
+⚠️ Since `atomWithHistory` and `atomWithUndo` keep a history of states, it's important to manage memory by setting a reasonable `limit`. Excessive history can lead to memory bloat, especially in applications with frequent state updates.
